<?xml version="1.0" encoding="utf-8"?>

<!--프레임안에 스크롤안에 리니어안에...?-->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"

    android:background="@color/iweca"

    tools:context=".Fragment_Add">

        <!--스크롤 뷰-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--이름-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="이름"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/addName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="이름을 입력해주세요"
                    android:focusable="true"/>

                <!--성별-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailSex"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />
                <RadioGroup
                    android:id="@+id/addSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/addSex_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="남"/>

                    <RadioButton
                        android:id="@+id/addSex_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="여"/>

                    <RadioButton
                        android:id="@+id/addSex_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="무"/>
                </RadioGroup>

                <!--이미지-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailImage"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />

                <ImageView
                    android:id="@+id/addImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:src="@tools:sample/avatars" />

                <Button
                    android:id="@+id/addSelectImageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="이미지 선택" />

                <!--간단 프로필-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailAge"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/addAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="세"
                    android:focusable="true"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailCm"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/addCm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="cm"
                    android:focusable="true"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailKg"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/addKg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="kg"
                    android:focusable="true"
                    />

                <!--상세정보-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailInfo"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/addInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:hint="내용을 입력해주세요."
                    />

                <!--android:ems="10" 텍스트 입력뷰 너비설정
                  android:singleLine="false" 이렇게 안해도
                  android:inputType="textMultiLine" 이렇게 하면 여러줄 가능
                -->

                <!--태그-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailTag"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/addTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="태그를 입력해주세요."
                    android:focusable="true"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="별점"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />

                <RatingBar
                    android:id="@+id/addRatingBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:padding="15dp"
                    android:rating="0"
                    android:stepSize="1"/>



               <!--숨김처리-->
                <TextView
                    android:id="@+id/addDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:hint="오늘 날짜"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/addLikeChk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="false"
                    android:textSize="17sp"/>


                <!--버튼 LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/addCreateBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp"
                        android:text="생성" />
                </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>

